<resources>
    <string name="app_name">imdb-application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_string">Home</string>
    <string name="search_string">Search</string>
    <string name="about_string">About</string>
    <string name="release">Release</string>
    <string name="duration">Duration</string>
    <string name="content_rating">Content Rating</string>
    <string name="imdb_rating">IMDb Rating</string>
    <string name="directors">Directors</string>
    <string name="stars">Stars</string>
    <string name="genres">Genres</string>
    <string name="detail_fragment_image">Detail Fragment Image</string>
    <string name="posterImage">poster %s</string>
    <string name="search_imdb">Search IMDb</string>
    <string name="no_data_place_holder">noDataPlaceholder</string>
    <string name="movie_item">movie item</string>
    <string name="history">History</string>
</resources>